Version 0.24.3
--------------
- You can navigate through search results in the library using the Return key and not just the arrow keys.
- Czech translation of the user interface (by Chemik582)
- Corrected bug #36 "A spline-bug with FidoCadJ 0.24"
- Corrected bug #45 "Color Print instead of Black and Wite print (or exported file)"
- Corrected bug #43 and #44 "Wrong component font when using a personally created component"

Version 0.24.2
--------------
- The user can now create new library symbols and edit existing libraries.
- Standard and non standard libraries are identified by different icons.
- Macros can be split (select one, then right click and "split macro").
- Removed the "Show origin for macros" which is now useless.
- Macros can be moved through user defined libraries via drag and drop in the library tree.
- When running on Linux, the sun.java2d.opengl option is no longer activated.
- Corrected bug #41 ("Components' shapes disappear").
- Corrected bug #20 ("Negative zoom reading file from command line").
- Japanese translation of the user interface.
- When introducing text, a list of some UTF-8 characters (maths symbols, greek letters...) is now available and very easy to use.
- Corrected a bug with the standard font used for the text associated to elements.
- The "Split non standard macros while copy/pasting" modal option has been replaced by an immediate menu item.
- Rough centering of the drawing under the mouse pointer while doing a zoom.
- Corrected a bug concerning the library directory choice and the Cancel action while working on MacOSX.

Version 0.24.1
--------------

- Added a link to the Sourceforge project page in the About dialog (request #3531298).
- Now Java 1.5 is needed for compiling FidoCadJ.
- The standard libraries now are stdlib, ihram, elettrotecnica and pcb. Their elements will not be converted in primitives when the "split non standard symbols" option is active, UNLESS the "Strict compatibility with FidoCAD" mode is selected. 