@@ -75,8 +75,8 @@ Browse = Browse
 Select_file_export = File to export
 Ok_btn = OK
 Cancel_btn = Cancel
-macrofont = Font for macro name and value:
-macroSize = Vertical size:
+macrofont = Font for name and value:
+macroSize = Vertical size of associated text:
 stroke_size_straight = Staight lines stroke width:
 stroke_size_oval = Bent lines stroke width:
 PCBsizes = PCB primitives
@@ -119,8 +119,8 @@ pcbpad_width = PCB pad width:
 pcbpad_height = PCB pad height:
 pcbpad_intw = PCB hole diameter:
 Quaqua = Use Quaqua (deactivate it if FidoCadJ is too slow)
-split_nonstandard = Split non standard macros when saving
-split_nonstandard_copy = Split non standard macros when copy/pasting
+split_nonstandard = Split non standard macros when saving (obsolete)
+split_nonstandard_copy = Split non standard macros when copy/pasting (obsolete)
 length = Length: 
 Enter_code = FidoCadJ code
 Layer_options = Layer options 
@@ -211,5 +211,7 @@ DirNotFound = The user library directory should be defined in the FidoCadJ setti
 ChangeKeyWarning = Warning: the macro will be changed and could not be visualized correctly if it is already in use in your drawing. Continue?
 InvalidCharLib = A library name is also used as a file name: it should not contain invalid characters for this use: /\~[],;{}"&.
 lib_filename = Library filename:
-
 Copy_split = Copy, split non standard macros
+
+Save_split = Save as..., split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
