@@ -212,3 +212,6 @@ ChangeKeyWarning = Atención: la macro será cambiada y no podrá ser visualizad
 InvalidCharLib = EL nombre de una librería está siendo utilizado como nombre de fichero: no debería contener carácteres prohibidos para este uso: /\~[],;{}"&.
 lib_filename = Nombre del fichero de la librería:
 Copy_split = Copia, desplaza macros no estándar.
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
