@@ -17,7 +17,7 @@ SelectAll = Tout sélectionner
 Rotate = Pivoter élément
 Mirror_E = Miroir
 Selection = Sél.
-tooltip_selection = A ou espace : Sélectionner/bouger un objet : R pivote, S met en miroir. Shift+drag : règle.
+tooltip_selection = A ou espace : Sélectionner/bouger un objet : R pivote, S met en miroir. Shift+glisse : règle.
 Zoom_p = Zoom
 tooltip_zoom = Click gauche : augmenter le zoom. Click droit : le diminuer.
 Hand = Bouge
@@ -76,12 +76,12 @@ Select_file_export = Fichier de destination
 Ok_btn = OK
 Cancel_btn = Annuler
 Param_opt=Paramètres
-macrofont = Police nom et valeur macro :
-macroSize = Dimension vertical texte macro :
+macrofont = Police nom et valeur (texte associé) :
+macroSize = Dimension vertical texte associé :
 stroke_size_straight = Largeur trait segments :
 stroke_size_oval = Largeur trait lignes courbes :
 PCBsizes = Primitives pour C.I.
-connection_size = Diamètre connexion électrique
+connection_size = Diamètre connexion électrique :
 Warning = Attention !
 Warning_overwrite = Il existe un fichier avec le même nom. Ecrire quand-même ?
 Warning_unsaved = Les modifications non sauvées seront perdues. Continuer ?
@@ -114,13 +114,13 @@ extFCJ_c=Activer extensions FidoCadJ pendant la copie d'éléments
 Restart=Démarrage
 Drawing=Dessin
 FidoCad=Extensions FidoCadJ
-pcbline_width = Largeur piste C.I.:
-pcbpad_width = Largeur pastille C.I.:
-pcbpad_height = Hauteur pastille C.I.:
-pcbpad_intw = Diamètre trou pastille C.I.:
+pcbline_width = Largeur piste C.I. :
+pcbpad_width = Largeur pastille C.I. :
+pcbpad_height = Hauteur pastille C.I. :
+pcbpad_intw = Diamètre trou pastille C.I. :
 Quaqua = Utiliser Quaqua (désactiver si FidoCadJ est lent)
-split_nonstandard = Subdiviser les macros non standard pendant le sauvetage
-split_nonstandard_copy = Subdiviser les macros non standard pendant le copier/coller
+split_nonstandard = Subdiviser les macros non standard pendant le sauvetage (obsolete)
+split_nonstandard_copy = Subdiviser les macros non standard pendant le copier/coller (obsolete)
 length = Longueur : 
 Enter_code = Code FidoCadJ
 Layer_options = Options du calque : 
@@ -211,5 +211,7 @@ DirNotFound = Le répertoire où se trouvent les bibliothèques utilisateur doit
 ChangeKeyWarning = Attention : cette opération pourrait faire en sorte que certains symboles du dessin actuel deviennent invalides. Continuer?
 InvalidCharLib = A library name is also used as a file name: it should not contain invalid characters for this use: /\~[],;{}"&.
 lib_filename = Nom du fichier :
-
 Copy_split = Copier, séparer macros non standard
+
+Save_split = Enregistrer sous..., séparer macros non standard
+Font_size_invalid=La taille de la police du texte associé aux éléments graphiques doit être positive.
