@@ -209,7 +209,10 @@ SpaceKey = La chiave non deve contenere spazi.
 SnapToGridOrigin = Blocca origine su griglia
 DirNotFound = La directory delle librerie utente dev'essere definita nella configurazione di FidoCadJ prima di provare a modificare o definire simboli.
 ChangeKeyWarning = Attenzione: il simbolo verrà modificato e potrebbe non venir visualizzato correttamente se è già stato usato nel disegno. Continuare?
-InvalidCharLib = A library name is also used as a file name: it should not contain invalid characters for this use: /\~[],;{}"&.
+InvalidCharLib = Un nome di libreria è pure usato come nome di file. Non dovrebbe pertanto contenere caratteri non adatti a questo: /\~[],;{}"&.
 lib_filename = Nome del file:
-
 Copy_split = Copia, separa macro non standard
+
+Save_split = Salva, separa macro non standard
+Font_size_invalid=La dimensione del font di testo associato agli elementi grafici dovrebbe essere sempre positiva.
+
