@@ -213,3 +213,6 @@ InvalidCharLib = ライブラリ名はファイル名と同様に使用されま
 lib_filename = ライブラリファイル名:
 
 Copy_split = コピー(非標準のマクロを分離)
+
+Save_split = Save, split non standard macros
+Font_size_invalid=The font size of the text associated to graphic elements should be positive. 
